# daum-mcp-toy

./: .gitignore  DEPLOY.md  Dockerfile  LICENSE  README.md  claude_desktop_config.example.json  docker-compose.yml  pyproject.toml
deploy/: Caddyfile  daum-mcp.service  nginx.conf
mocks/: data.py
servers/: http_app.py  knowledge.py  meta.py  search.py  solar.py
tests/: test_http.py  test_smoke.py
