[project]
name = "daum-mcp-mock"
version = "0.1.0"
description = "Mock MCP servers for Daum Agent Portal — Tier 0 (4 servers, 14 tools)"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-asyncio>=0.23"]

[project.scripts]
daum-meta = "servers.meta:main"
daum-search = "servers.search:main"
daum-knowledge = "servers.knowledge:main"
daum-solar = "servers.solar:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["servers", "mocks"]
